feat: support inspection field with markdown path and keep description from JSON in plugin index script

--- a/Extensions/MetaGame/extensions.json
+++ b/Extensions/MetaGame/extensions.json
@@ -1,6 +1,6 @@
 {
     "name": "MetaGame",
-    "description": "Add ready-made meta elements to your game without unnecessary junk",
+    "description": "this a plugin that allows you to easily add various meta-game elements to an existing game with core mechanics at your discretion.",
     "version": "0.0.1",
     "stage": "Pre-Alpha",
     "status": "Planned",
